<resources>
    <string name="app_name">Bike Sharing</string>
    <string name="title_activity_select_station">Map</string>
    <string name="boot_Screen">boot screen</string>
    <string name="and_symbol"><![CDATA[&]]></string>
    <string name="free_of_charge">Free of Charge!</string>
    <string name="home">Home</string>
    <string name="report_issue">Report Issue</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="creators">Creators</string>
    <string name="sign_out">Sign Out</string>
</resources>
